using System;
using System.Collections.Generic;
using System.Text;

namespace TaskService.Domain.Entities;

public class IssueType
{
}
