erDiagram
    Users {
        Guid id PK
        Guid keycloak_id
        varchar(100) email
        varchar(50) username "Отображаемое имя"
        timestamp CreateDate
    }

    Workspaces {
        Guid id PK
        varchar(225) name
        bigint owner_id FK "→ Users.id"
        timestamp created_at
    }

    %%Не реализовано
    WorkspaceMembers {
        Guid workspace_id PK,FK "→ Workspaces.id"
        Guid user_id PK,FK "→ Users.id"
        varchar(10) role "member | admin"
        timestamp joined_at
    }

    Projects {
        Guid id PK
        Guid workspace_id FK "→ Workspaces.id"
        varchar(225) name
        text description
        DateTimeOffset created_at
    }

    %%Не реализовано
    ProjectMembers {
        Guid project_id PK,FK "→ Projects.id"
        Guid user_id PK,FK "→ Users.id"
        varchar(10) role "viewer | member | admin"
        timestamp joined_at
    }

    IssueTypes {
        int id PK
        varchar(50) name
        char(7) color
        boolean is_default
    }


    Statuses {
        int id PK
        varchar(50) name
        varchar(20) category "todo | in_progress | done"
        int position
        char(7) color
    }

    Issues {
        Guid id PK
        Guid ProjectId FK "→ Projects.id"
        %%Не реализовано
        varchar(20) key "PROJ-123"
        varchar(225) Name
        text Description
        Guid issue_type_id FK "→ IssueTypes.id"
        Guid status_id FK "→ Statuses.id"
        Guid reporter_id FK "→ Users.id"
        %%Не реализовано
        int priority
        %%Даты программно
        DateTimeOffset CreatedDate
        DateTimeOffset UpdatedDate
        DateTimeOffset ResolvedDate "NULL"
        DateTimeOffset DueDate "NULL"

    }
    
    %%Не реализовано
    IssueAssignees {
        Guid issue_id PK,FK "→ Issues.id"
        Guid user_id PK,FK "→ Users.id"
        timestamp assigned_at
        boolean is_lead "основной исполнитель"
    }
    %%Не реализовано
    Comments {
        Guid id PK
        Guid issue_id FK "→ Issues.id"
        Guid author_id FK "→ Users.id"
        text content
        timestamp created_at
        timestamp updated_at "NULL"
    }
    %%Не реализовано
    Attachments {
        Guid id PK
        Guid issue_id FK "→ Issues.id"
        Guid uploader_id FK "→ Users.id"
        varchar(512) storage_path
    }
    %%Не реализовано
    StatusTransitions {
        Guid id PK
        Guid workspace_id FK
        Guid from_status_id FK "→ Statuses.id"
        Guid to_status_id FK "→ Statuses.id"
        varchar(10) allowed_role "NULL = любой"
    }


    %%Workspaces ||--o{ Projects : "содержит"
    Workspaces ||--o{ WorkspaceMembers : "имеет участников"

    Projects ||--o{ Issues : "содержит задачи"
    Projects ||--o{ Workspaces : "группируется в"
    Projects ||--o{ ProjectMembers : "имеет участников"
    Projects ||--o{ IssueTypes : "определяет типы задач"
    Projects ||--o{ Statuses : "определяет статусы"
    Projects ||--o{ StatusTransitions : "определяет переходы"


    Issues ||--o{ IssueAssignees : "имеет участников"
    Issues ||--o{ Comments : "содержит комментарии"
    Issues ||--o{ Attachments : "содержит файлы"
    Issues }o--|| IssueTypes : "тип задачи"
    Issues }o--|| Statuses : "текущий статус"

    Users ||--o{ IssueAssignees : "исполнитель(и) задач"
    Users ||--o{ WorkspaceMembers : "участник пространства"
    Users ||--o{ ProjectMembers : "участник проекта"
    Users ||--o{ Comments : "автор комментария"
    Users ||--o{ Attachments : "загрузил файл"

 